--- a/assets/style.css
+++ b/assets/style.css
@@ -79,6 +79,10 @@
       position: fixed;
       top: 0;
       right: 0;
-      background: #fff; /* Background color for the column */
+      height: 100%;
+      width: 200px;
+      background-image: linear-gradient(50deg, #079ed8 0%, #0160a2 100%);
       padding: 20px; /* Adjust the padding as needed */
+      color: aliceblue;
+
     }
