--- a/assets/style.css
+++ b/assets/style.css
@@ -1,88 +1,107 @@
+nav ul a,
+nav .brand-logo {
+  color: #444;
+}
 
- nav ul a,
- nav .brand-logo {
-   color: #444;
- }
- 
- p {
-   line-height: 2rem;
- }
- 
- .sidenav-trigger {
-   color: #26a69a;
- }
- 
- .parallax-container {
-   min-height: 380px;
-   line-height: 0;
-   height: auto;
-   color: rgba(255,255,255,.9);
- }
-   .parallax-container .section {
-     width: 100%;
-   }
- 
- @media only screen and (max-width : 992px) {
-   .parallax-container .section {
-     position: absolute;
-     top: 40%;
-   }
-   #index-banner .section {
-     top: 10%;
-   }
- }
- 
- @media only screen and (max-width : 600px) {
-   #index-banner .section {
-     top: 0;
-   }
- }
- 
- .icon-block {
-   padding: 0 15px;
- }
- .icon-block .material-icons {
-   font-size: inherit;
- }
- 
- footer.page-footer {
-   margin: 0;
- }
+p {
+  line-height: 2rem;
+}
 
- .stockimageheader {
+.sidenav-trigger {
+  color: #26a69a;
+}
+
+.parallax-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 380px;
+  line-height: 0;
+  height: auto;
+  color: rgba(255, 255, 255, .9);
+}
+
+.parallax-container .section {
+  width: fit-content;
+}
+
+@media only screen and (max-width : 992px) {
+  .parallax-container .section {
+    position: absolute;
+    top: 40%;
+  }
+
+  #index-banner .section {
+    top: 10%;
+  }
+}
+
+@media only screen and (max-width : 600px) {
+  #index-banner .section {
+    top: 0;
+  }
+}
+
+.icon-block {
+  padding: 0 15px;
+}
+
+.icon-block .material-icons {
+  font-size: inherit;
+}
+
+footer.page-footer {
+  margin: 0;
+}
+
+.stockimageheader {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -1; /* Place the image behind other content */
+  z-index: -1;
+  /* Place the image behind other content */
 }
 
 .stockimageheader img {
   width: 100%;
   height: 100%;
-  object-fit: cover; /* Scale the image to cover the entire container */
+  object-fit: cover;
+  /* Scale the image to cover the entire container */
 }
- 
-    /* Center all text elements */
-    body,
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    p {
-      text-align: center;
-    }
 
-    .github-links {
-      position: fixed;
-      top: 0;
-      right: 0;
-      height: 100%;
-      width: 200px;
-      background-image: linear-gradient(50deg, #079ed8 0%, #0160a2 100%);
-      padding: 20px; /* Adjust the padding as needed */
-      color: aliceblue;
+/* Center all text elements */
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+p {
+  text-align: center;
+}
 
-    }
+/* Position: absolute -> sticky;
+   display: none;
+   right: 0;
+   height: 100vh;*/
+.github-links {
+  display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  height: 100vh; 
+  width: 160px;
+  background-image: linear-gradient(50deg, #079ed8 0%, #0160a2 100%);
+  padding: 20px;
+  color: aliceblue;
+}
+
+.github-links a:hover {
+  color: white;
+}
+
+
+
+
