--- a/assets/style.css
+++ b/assets/style.css
@@ -102,6 +102,18 @@ p {
   color: white;
 }
 
+.close-button {
+  float: right;
+  cursor: pointer;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+/* CSS to hide the GitHub links section initially */
+.github-links {
+  display: none;
+}
+
 
 
 
