--- a/assets/style.css
+++ b/assets/style.css
@@ -122,3 +122,40 @@ p {
 .contact-section .btn-large {
   margin: 0 10px; /* Add some spacing between the buttons if desired */
 }
+
+#stockInfo {
+  align-content: center;
+  display: grid;
+  grid-template:
+    'stockSymbol lastPrice'
+    'volume exchangeRate';
+  background-image: linear-gradient(50deg, #079ED8 0%, #0160A2 100%);
+  margin: 0px 20px;
+
+}
+
+#stockInfo p {
+  margin: 0;
+}
+
+#stockSymbol {
+  grid-area: stockSymbol;
+  border-right: 1px solid black;
+  border-bottom: 1px solid black;
+}
+
+#lastPrice {
+  grid-area: lastPrice;
+  border-bottom: 1px solid black;
+
+}
+
+#volume {
+  grid-area: volume;
+  border-right: 1px solid black;
+
+}
+
+#exchangeRate {
+  grid-area: exchangeRate;
+}
