--- a/assets/style.css
+++ b/assets/style.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
 }
 .section {
-  width: 48%; /* Adjust the width as needed */
+  width: 48%; 
 }
 .collapsible {
   list-style: none;
@@ -17,32 +17,31 @@
 }
 /* Style the Stock and Currency buttons */
 .collapsible-header {
-  background-color: #02101A; /* Change the background color */
-  color: white; /* Change the font color */
-  padding: 10px; /* Adjust the padding as needed */
-  border: 1px solid #007ACC; /* Add a border to the header */
+  background-color: #02101A; 
+  color: white; 
+  padding: 10px; 
+  border: 1px solid #007ACC; 
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 60px; /* Adjust the height as needed */
+  height: 60px; 
   cursor: pointer;
 }
-/* Customize the Stock and Currency button icons */
+
 .collapsible-header i {
-  font-size: 20
-  px; /* Change the icon size */
+  font-size: 20 px;
 }
-/* Style the content inside the dropdown */
+
 select {
-  background-color: white; /* Change the background color to white */
-  color: #007ACC; /* Change the font color */
-  font-size: 16px; /* Change the font size */
-  height: 60px; /* Adjust the height as needed */
+  background-color: white; 
+  color: #007ACC; 
+  font-size: 16px; 
+  height: 60px; 
 }
-/* Customize the font color of options in the dropdown */
+
 select option {
-  color: #007ACC; /* Change the font color */
-  height: 30px; /* Adjust the height as needed */
+  color: #007ACC; 
+  height: 30px; 
 }
 .icon-block {
   padding: 0 15px;
@@ -63,16 +62,10 @@ select option {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  /* Scale the image to cover the entire container */
+  
 }
-/* Center all text elements */
-body,
-h1,
-h2,
-h3,
-h4,
-h5,
-p {
+
+body,h1,h2,h3,h4,h5,p {
   text-align: center;
   color: white;
   font-weight: bold;
@@ -119,7 +112,7 @@ footer .github-links {
   position: absolute;
   bottom: 8px;
   left: 16px;
-  margin: 0 20px; /* Add some spacing between the buttons if desired */
+  margin: 0 20px; 
 }
 
 #stockInfo {
